Revert "fix overflow issue and remove css-variables"
This reverts commit 7c5dda75f513196b938164b3f1d538835e6b13d3.

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,14 +1,10 @@
 :host {
   display: contents;
-  overflow: auto;
 }
 
 .root {
-  all: inherit;
   display: block;
   contain: paint;
-  background-color: var(--background-color);
-  caret-color: var(--foreground-color);
 }
 
 .editor,
@@ -21,12 +17,23 @@
 .editor {
   display: block;
   position: relative;
+
+  background-color: var(--background-color);
+  caret-color: var(--foreground-color);
+
+  padding: var(--padding);
+  padding-top: var(--padding-top, var(--padding));
+  padding-right: var(--padding-right, var(--padding));
+  padding-bottom: var(--padding-bottom, var(--padding));
+  padding-left: var(--padding-left, var(--padding));
+
+  font-size: inherit;
 }
 
 .container {
   position: relative;
   flex: 1;
-  & code {
+  & code:not(.character) {
     display: block;
     position: relative;
     z-index: 1;
